--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
     <!-- <canvas id="stage"> </canvas> -->
     <div class="greyContainer" id="intro">
+      <div class="introText">
       <p class="heading1">
         "Welcome to a world where imagination knows no bounds, where the
         extraordinary intertwines with reality. Fantasy beckons, inviting you to
@@ -66,15 +67,19 @@
         imagination, resonating deeply within the human soul.
       </p>
     </div>
+    </div>
     <div class="redContainer">
       <div class="wizardsContainer midContainer fadein" id="fadein-1">
         <span class="midHeading">Wizards and Witches</span>
+        <img src="assests/dumbledore.gif" alt="" id="dumbledore" class="hiddenMid">
       </div>
       <div class="SwordsContainer midContainer fadein" id="fadein-2">
         <span class="midHeading">Swords and Sorcery</span>
+        <img src="assests/swordHidden.gif" alt="" id="swordHidden" class="hiddenMid">
       </div>
       <div class="BeastsContainer midContainer fadein" id="fadein-3">
         <span class="midHeading">Enchanted Beasts</span>
+        <img src="assests/dragonHidden.gif" alt="" id="dragonHidden" class="hiddenMid">
       </div>
     </div>
 
@@ -95,7 +100,12 @@
         and Tushar Sharma -two indispensable work engines of AASF."
       </p>
     </div>
-
+<div class="container2">
+  Download the Spells!
+<div class="qualityButtons">
+  <a href="https://drive.google.com/file/d/1tR5AejLQr-5bErVDbqn2plhxrjO1NAW4/view?usp=drive_link" class="lowQuality" download="Abhishar v13.0"></a>
+  <a  href="https://drive.google.com/file/d/1f6--m2xgpdCEULnDE6Aowwv758pzz-7E/view?usp=drive_link" class="highQuality" download="Abhishar v13.0"></a>
+</div></div>
     <div class="skullContainer">
       <iframe
         style="width: 100%; height: 100vh"
@@ -121,17 +131,11 @@
       let dragon2=document.getElementById("dragon2");
       let fire=document.getElementById("fire");
 
-      // let moon=document.getElementById("moon");
-      // let stars=document.getElementById("stars");
-      // let mountainBe=document.getElementById("mountains-behinf");
-      // let mountainsFr=document.getElementById("mountains-front");
-      // let text=document.getElementById("text");
-
       window.addEventListener("scroll",function(){
         let value=window.scrollY;
-        dragon1.style.left=value*0.15+"px";
-        fire.style.bottom=(value*0.5)-200+"px";
-        dragon2.style.right=value*0.25+"px";
+        dragon1.style.left=value*0.25+"px";
+        fire.style.opacity=1-(value*0.0025);
+        dragon2.style.right=value*0.35+"px";
       })
 
     </script>
