--- a/index.html
+++ b/index.html
@@ -26,19 +26,11 @@
   </head>
   <body onload="hide()">
     <div class="loader">
+      <img src="assests/goku_dribble_v2.gif" class="loading_animation" alt="">
     </div>
-    <!--
-      <section>
-        <img src="images/stars.avif" id="stars">
-        <img src="images/moon.avif.png" id="moon">
-      <img src="images/mountains-behinf.webp" id="mountains-behinf">
-      <h2 id="text">MOON LIGHT</h2>
-      <img src="images/mountains-front.jpg.png" id="mountains-front">
-    </section>
-    <div class="sec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum unde alias distinctio vero, minima mollitia illum ea recusandae asperiores laudantium.</div> -->
     <div class="main-page">
       <header>
-        <a href="#" class="logo">AASF</a>
+        <img src="assests/aasf-white.png" class="logo">
         <ul>
           <li><a href="https://www.aasf.in" class="active">AASF Website</a></li>
           <li><a href="#launchVideo">Launch Video</a></li>
@@ -46,9 +38,6 @@
         </ul>
       </header>
     <div class="wrapper">
-      <img src="assests/dragon1.png" alt="" id="dragon1">
-      <img src="assests/dragon3.png" alt="" id="dragon2">
-      <img src="assests/fire.png" alt="" id="fire">
       <h1 class="Abhishar">ABHISHAR v13.0</h1>
       <h2 class="tagline">Alohomora into the alley of fantasy</h2>
     </div>
@@ -62,13 +51,49 @@
         and dreams take flight."
       </p>
       <p>
-        Embracing the fantastical, where stories ignite the spirit and fuel the
-        imagination, resonating deeply within the human soul.
+        "Abhishar is the annual magazine of AASF and also of the prestigious
+        institute ABV-IIITM Gwalior. This magazine is a space for students to
+        exhibit their literary talents and express their ideas and
+        opinions.“Abhishar”, the annual magazine of AASF, means companionship
+        and has evolved from the names of our late AASF members- Abhinav Saxena
+        and Tushar Sharma -two indispensable work engines of AASF."
       </p>
     </div>
     </div>
+
+    <div class="themeSection">
+      <div class="themeleft">
+        <p class="themeText">"Not all those who <br>wander are lost"</p>
+        <div class="cardsContainer">
+          <div>
+        <div class="themeCard" id="card1">
+          <div class="CardHeading" id="head1">Wizards and Witches</div>
+          <div class="innerCard" id="innerCard1"></div>
+        </div>
+      </div>
+      <div>
+        <div class="themeCard" id="card2">
+          <div class="CardHeading" id="head2">Swords and Sorcery</div>
+          <div class="innerCard" id="innerCard2"></div>
+        </div>
+      </div>
+      <div>
+        <div class="themeCard" id="card3">
+          <div class="CardHeading" id="head3">Enchanted Beasts</div>
+          <div class="innerCard" id="innerCard3"></div>
+        </div>
+      </div>
+      </div>
+      </div>
+      <div class="themeRight">
+        <iframe id="launchVideo"
+        src="https://res.cloudinary.com/kunaaaaalll/video/upload/v1668946764/Abhishar/InShot_20221120_163233807_asnr8y.mp4"
+        allowfullscreen
+      ></iframe>
+      </div>
+    </div>
     
-    <div class="redContainer">
+    <!-- <div class="redContainer">
       <div class="wizardsContainer midContainer fadein" id="fadein-1">
         <span class="midHeading">Wizards and Witches</span>
         <img src="assests/dumbledore.gif" alt="" id="dumbledore" class="hiddenMid">
@@ -81,15 +106,15 @@
         <span class="midHeading">Enchanted Beasts</span>
         <img src="assests/dragonHidden.gif" alt="" id="dragonHidden" class="hiddenMid">
       </div>
-    </div>
+    </div> -->
 
-    <div class="launchVideo" id="launchVideo">
+    <!-- <div class="launchVideo" id="launchVideo">
       <iframe
         src="https://res.cloudinary.com/kunaaaaalll/video/upload/v1668946764/Abhishar/InShot_20221120_163233807_asnr8y.mp4"
         allowfullscreen
       ></iframe>
-    </div>
-    <div class="greyContainer" id="abhisharInfo">
+    </div> -->
+    <!-- <div class="greyContainer" id="abhisharInfo">
       <img src="assests/gladiator01.png" alt="" id="gladiator">
       <p>
         "Abhishar is the annual magazine of AASF and also of the prestigious
@@ -99,14 +124,15 @@
         and has evolved from the names of our late AASF members- Abhinav Saxena
         and Tushar Sharma -two indispensable work engines of AASF."
       </p>
-    </div>
-<div class="container2">
-  Download the Spells!
-<div class="qualityButtons">
-  <a href="https://drive.google.com/file/d/1tR5AejLQr-5bErVDbqn2plhxrjO1NAW4/view?usp=drive_link" class="lowQuality" download="Abhishar v13.0"></a>
-  <a  href="https://drive.google.com/file/d/1f6--m2xgpdCEULnDE6Aowwv758pzz-7E/view?usp=drive_link" class="highQuality" download="Abhishar v13.0"></a>
-</div></div>
+    </div> -->
+
     <div class="skullContainer">
+      <div class="container2">
+        Download the Spells!
+      <div class="qualityButtons">
+        <a href="https://drive.google.com/file/d/1tR5AejLQr-5bErVDbqn2plhxrjO1NAW4/view?usp=drive_link" class="lowQuality" download="Abhishar v13.0"></a>
+        <a  href="https://drive.google.com/file/d/1f6--m2xgpdCEULnDE6Aowwv758pzz-7E/view?usp=drive_link" class="highQuality" download="Abhishar v13.0"></a>
+      </div></div>
       <iframe
         style="width: 100%; height: 100vh"
         src="https://online.fliphtml5.com/gnitm/btld/"
@@ -137,8 +163,6 @@
         fire.style.opacity=1-(value*0.0025);
         dragon2.style.right=value*0.35+"px";
       })
-
-      
     </script>
   </body>
 </html>
