Bug Fixes in sizing and animation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </header>
     <div class="wrapper">
       <h1 class="Abhishar">ABHISHAR v13.0</h1>
-      <h2 class="tagline">Alohomora into the alley of fantasy</h2>
+      <h2 class="tagline">Alohomora into the Alley of Fantasy</h2>
     </div>
     <div class="greyContainer" id="intro">
       <div class="introText">
@@ -64,7 +64,7 @@
     <div class="themeSection">
       <img src="assests/gladiator01.webp" class="left" loading="lazy"></img>
       <div class="right">
-        <div class="theme_Text">"Not all those who <br>wander are lost"</div>
+        <p class="theme_Text">"Not all those who<br>wander are lost"</p>
         <div class="cards_container">
           <div class="theme_Card" id="card_1">
               <p class="card_text">Wizards and Witches</p>
@@ -89,8 +89,8 @@
     <div class="container2">
       Download the Spells!
     <div class="qualityButtons">
-      <a href=""><div class="lowQuality"></div>Standard Resolution</a>
-      <a href=""><div class="lowQuality"></div>Premium Resolution</a>
+      <a href=""><div class="lowQuality"></div>Low Resolution</a>
+      <a href=""><div class="lowQuality"></div>High Resolution</a>
     </div></div>
     <div class="skullContainer">
       <iframe
