--- a/index.html
+++ b/index.html
@@ -93,15 +93,7 @@
       <a href=""><div class="lowQuality"></div>High Resolution</a>
     </div></div>
     <div class="skullContainer">
-      <iframe
-        style=" width:100%; height: 100vh"
-        src="https://online.fliphtml5.com/gnitm/btld/"
-        seamless="seamless"
-        scrolling="no"
-        frameborder="0"
-        allowtransparency="true"
-        allowfullscreen="true"
-      ></iframe>
+      <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/85821e5a8b.html" style="border: 0px; width: 100%; height: 100vh;"></iframe>
     </div>
   </div>
     <script src="script.js"></script>
