--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <div class="container2">
       Download the Spells!
     <div class="qualityButtons">
-      <a href=""><div class="lowQuality"></div>Low Resolution</a>
-      <a href=""><div class="lowQuality"></div>High Resolution</a>
+      <a href="https://drive.google.com/file/d/1YNo3XQXGvoBffE1Vn5RcsMTxIyL2s3UI/view?usp=drive_link"><div class="lowQuality"></div>Low Resolution</a>
+      <a href="https://drive.google.com/file/d/1j1kaUnhdcoZoCi8Zcz9YGHK6VbmlUxVC/view?usp=drive_link"><div class="lowQuality"></div>High Resolution</a>
     </div></div>
     <div class="skullContainer">
       <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/85821e5a8b.html" style="border: 0px; width: 100%; height: 100vh;"></iframe>
